--- a/public/css/style.css
+++ b/public/css/style.css
@@ -252,11 +252,11 @@
 }
 
 .img-post{
-    float: left;
-    border: transparent thin solid;
-    padding: 5px;
-    margin: 0px 10px 10px 0;
-    border: 1px #aaa solid;
+	float: left;
+	border: transparent thin solid;
+	padding: 5px;
+	margin: 0px 10px 10px 0;
+	border: 1px #aaa solid;
 	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -284,4 +284,118 @@
 
 .card-perfil-titulos{
 	font-size: 14px;
+}
+
+
+
+
+
+
+
+
+
+
+
+.quiz-title{
+	border-bottom: 2px solid;
+	color: #82D9A5;
+	padding-bottom: 10px;
+	font-weight: 600;
+	text-transform: uppercase;
+	font-size: 25px;
+	text-align: center;
+}
+
+.quiz-info{
+	color: #82D9A5;
+	padding: 15px 0px 5px 0px;
+	font-weight: 600;
+	text-transform: uppercase;
+	font-size: 16px;
+	text-align: center;
+}
+
+.quiz-sub-title{
+	color: #82D9A5;
+	font-weight: 600;
+	text-transform: uppercase;
+	font-size: 16px;
+	text-align: center;
+	margin: 0 auto;
+}
+
+.quiz-content{
+	color: #eee;
+}
+
+.quiz-submit{
+	text-align: center;
+	color: #82D9A5;
+}
+
+.btn-outline-success:hover{
+	color: #82D9A5;
+}
+
+@media (max-width: 768px){
+	.quiz-info{
+		color: #82D9A5;
+		padding: 15px 0px 5px 0px;
+		font-weight: 600;
+		text-transform: uppercase;
+		font-size: 16px;
+	}
+
+	.quiz-sub-title{
+		color: #82D9A5;
+		font-weight: 600;
+		text-transform: uppercase;
+		font-size: 18px;
+	}
+}
+
+hr{
+	background-color: #82D9A5;
+}
+
+.card-box {
+	border: 1px solid #82D9A5;
+	border-radius: 5px;
+	background-color: #000;
+	color: #fff;
+	text-align: center;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	margin: auto;
+	padding: 10px 5px 5px 5px;
+	margin-bottom: 10px; 
+}
+.card-box hr{ 
+	border:1px solid #82D9A5;
+	margin-top: 10px;
+	margin-bottom: 7px;
+}
+
+.card-box a {
+	font-size: 16px;
+	color: #82D9A5;
+}
+.
+.card-box h4{
+	font-size: 20px;
+	text-transform: uppercase;
+}
+
+.card-box h4:hover{
+	color: #99FFC2;
+	transition: 0.5s;
+	text-decoration: none;
+}
+
+.card-box p {
+	font-size: 13px;
+	color: rgba(255,255,255, .85);
+}
+
+.quiz-card{
+	padding-top: 10px;
 }
