--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,314 +5,391 @@
 	font-family: 'Ubuntu', sans-serif;
 }
 
-.background-body{
-	background-image: url(../imgs/bg3.jpg);
-	background-attachment: fixed;
-	background-repeat: repeat;
-	background-position: 20% 50%;
-	background-size:cover;
-}
 
-.nav-principal{
+.no-scroll {
+	margin: 0;
+	height: 100%;
+	overflow: hidden;
+}
+.spinner-ctn{
+	position: absolute;
+	top:0;
 	background-color: #222;
-	font-size: 25px;	
-}
-
-#link{
-	color: #6ACC91;
-}
-
-#link:hover{
-	color: #B7FEE0;
-	transition: all .2s linear;
-}
-
-.btn-site{
-	background-color: #6ACC91;
-}
-
-.btn-site:hover{
-	background-color: #B7FEE0;
-}
-
-.nav-secundario{
-	background-color: #E0FFF2;
-	height: 35px;
-	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.link-1 {
-  transition: 0.3s ease;
-  background: #3fa46a;
-  color: #ffffff;
-  font-size: 20px;
-  text-decoration: none;
-  border-top: 4px solid #3fa46a;
-  border-bottom: 4px solid #3fa46a;
-  padding: 20px 0;
-  margin: 0 20px;
-}
-.link-1:hover {
-  border-top: 4px solid #ffffff;
-  border-bottom: 4px solid #ffffff;
-  padding: 6px 0; 
-}
-@media (max-width: 576px){
-	.nav-secundario{
-		height: 25px;
-
-	}
-}
-
-.logarOuCadastrar{
-
-}
-
-.logarOuCadastrar:hover{
-	cursor: pointer;
-	transition: .3s all linear;
-	color: red;
-}
-
-.principal{
-	padding-bottom: 120px;
-}
-
-.mask{
-	background-color: #111;
-	margin-top: 15px;
-	padding-top: 25px;
-	margin-bottom: 5px;
-	padding-bottom: 10px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	border: 1px solid #6ACC91;
-	border-radius: 3px;
-
-}
-
-.mask-title{
-	border-bottom: 2px solid;
-	color: #82D9A5;
-	padding-bottom: 10px;
-	font-weight: 600;
-	text-transform: uppercase;
-	font-size: 25px;
-	text-align: center;
-}
-
-.mask-content{
-	padding: 15px;
-	color:#eee;
-}
-
-.mask-content-top10{
-	text-align: center;
-	color: #eee;
-	padding-top: 10px;
-}
-
-
-.footer{
-	background-color: #111;
-	color: white;
+	height: 100vh;
 	width: 100%;
-	padding: 10px;
-	text-align: center;
-
-}
-@media (max-width: 576px){
-	.mask {
-		margin-top: 20px;
-	}
-}
-/* PERFIL */
-
-
-.topo-perfil{
-	text-align: center;
-	padding: 30px;
+	z-index: 999999;
 }
 
-.nome-perfil{
-	text-transform: uppercase;
-	font-size: 32px;
-	font-weight: 700;
-	text-decoration: underline;
-	color: #82D9A5;
-}
-
-.avatar img{
-	border: 2px solid #82D9A5;
+.spinner{
+	width: 60px;
+	height: 60px;
+	border: 3px solid white;
+	border-top:3px solid #82D9A5;
 	border-radius: 100%;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	position: absolute;
+	top:0;
+	bottom:0;
+	left:0;
+	right: 0;
+	margin: auto;
 
-}
-
-.pills-perfil a{
-	background-color: #82D9A5;
-	color: #111;
-}
-
-.pills-perfil a:hover{
-	background-color: #E0FFF2;
-	transition: .2s all linear;
-	color: #111;
+	animation: spin 1s infinite linear;
 }
 
-.pills-perfil a:visited{
-	color: #fff;
-}
-
-.nav-item{
-	border-radius: 0px;
-	border-left: 1px solid #111;
-}
-
-
-.card-postagem{
-	background-color: #333;
-	margin-top: 15px;
-	padding: 15px;
-	border: 1px #82D9A5 solid;
-	border-radius: 5px 50px 5px;
-	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.card-nome{
-	font-size: 25px;
-	color: #eee;
-	font-weight: 700;
-}
-.card-posted-by{
-	color:#82D9A5;
-	text-transform: uppercase;
-}
-.card-link a{
-	color:#82D9A5;
-	text-transform: uppercase;
-	font-size: 20px;
-	padding-top: 10px;
-}
-.card-link a:hover{
-	transition: .3s all linear;
-	color:#E0FFF2;
-	text-transform: uppercase;
-}
-
-.card-content{
-	color: #eee;
-}
-
-.home-page-perfil-text{
-	text-transform: uppercase;
-	text-align: center;
-	font-size: 24px;
-	padding: 30px;
-	font-weight: 800;
-	color: #82D9A5;
-}
-
-.home-page-perfil-text-nivel{
-	text-transform: uppercase;
-	text-align: center;
-	font-size: 28px;
-	margin-top:35px;
-	padding: 20px;
-	font-weight: 800;
-	color: #82D9A5;
-}
-
-.home-page-perfil-text-exp{
-	margin-top:5px;
-	text-align: center;
-	font-size: 20px;
-	padding: 20px;
-	color: #eee;
-}
-.conquista_simbol{
-	text-align: center;
-}
-.conquista_simbol img{
-	text-align: center;
-	margin: 0 auto;
-	border: 1px solid #aaa;
-}
-
-.conq-title{
-	text-align: center;
-	font-size: 16px;
-	color:#eee;
-}
-
-.hr-style{
-	border-top: 3px double #82D9A5;
-}
-
-.hr-style-2{
-	border-top: 1px dashed #82D9A5;
-}
-
-@media (max-width: 992px){
-	.card-content{
-		text-align: center;
+@keyframes spin {
+	from{
+		transform: rotate(0deg);
+		}to{
+			transform: rotate(360deg);
+		}
 	}
-	.card-link{
-		text-align: center;
-		padding: 20px;
+
+	.background-body{
+		background-image: url(../imgs/bg3.jpg);
+		background-attachment: fixed;
+		background-repeat: repeat;
+		background-position: 20% 50%;
+		background-size:cover;
 	}
-	.conq-title{
-		font-size: 16px;
+
+	.nav-principal{
+		background-color: #222;
+		font-size: 25px;	
+	}
+
+	#link{
+		color: #6ACC91;
+	}
+
+	#link:hover{
+		color: #B7FEE0;
+		transition: all .2s linear;
+	}
+
+	.btn-site{
+		background-color: #6ACC91;
+	}
+
+	.btn-site:hover{
+		background-color: #B7FEE0;
+	}
+
+	.nav-secundario{
+		background-color: #E0FFF2;
+		height: 35px;
+		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	}
+
+	.link-1 {
+		transition: 0.3s ease;
+		background: #3fa46a;
+		color: #ffffff;
+		font-size: 20px;
+		text-decoration: none;
+		border-top: 4px solid #3fa46a;
+		border-bottom: 4px solid #3fa46a;
+		padding: 20px 0;
+		margin: 0 20px;
+	}
+	.link-1:hover {
+		border-top: 4px solid #ffffff;
+		border-bottom: 4px solid #ffffff;
+		padding: 6px 0; 
+	}
+	@media (max-width: 576px){
+		.nav-secundario{
+			height: 25px;
+
+		}
+	}
+
+
+	.modal{
+		background-color: rgba(33,33,33, .8);
+	}
+	.modal-header{
+		background-color: #333;
+		border: 3px solid #82D9A5;
+	}
+	.modal-header p{
+		color: #82D9A5;
+		text-align: center;
+		font-size: 20px;
+		font-weight: 800;
+		text-transform: uppercase;
+	}
+	.modal-header span{
+		text-decoration: none;
+		color: white;
+	}
+	.modal-body{
+		background-color: #333;
+		color: #82D9A5;
+		border: 3px solid #82D9A5;
+	}
+	.modal-footer{
+		background-color: #333;
+		color: #82D9A5;
+		border: 3px solid #82D9A5;
+	}
+
+	.modal.custom {
+		outline:none;
+
+	}
+
+	.modal.custom .modal-dialog {
+		width:50%;
+		margin:0 auto;
+	}
+
+	.logarOuCadastrar{
+
+	}
+
+	.logarOuCadastrar:hover{
+		cursor: pointer;
+		transition: .3s all linear;
+		color: red;
+	}
+
+	.principal{
+		padding-bottom: 120px;
+	}
+
+	.mask{
+		background-color: #111;
+		margin-top: 15px;
+		padding-top: 25px;
+		margin-bottom: 5px;
 		padding-bottom: 10px;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		border: 1px solid #6ACC91;
+		border-radius: 3px;
+
 	}
-}
 
-.change-info{
-	padding: 15px;
-	margin-bottom: 15px;
-	color: #eee;
-}
+	.mask-title{
+		border-bottom: 2px solid;
+		color: #82D9A5;
+		padding-bottom: 10px;
+		font-weight: 600;
+		text-transform: uppercase;
+		font-size: 25px;
+		text-align: center;
+	}
 
-.info-post{
-	text-align: right;
-	font-size: 16px;
-}
+	.mask-content{
+		padding: 15px;
+		color:#eee;
+	}
 
-.img-post{
-	float: left;
-	border: transparent thin solid;
-	padding: 5px;
-	margin: 0px 10px 10px 0;
-	border: 1px #aaa solid;
-	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.post-text{
-	text-align: justify;
-	text-indent: 2em;
-}
-
-.card-perfil{
-	border: 1px solid #82D9A5;
-	border-radius: 5px 20px;
-	padding: 10px;
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-
-.card-perfil-avatar{
-	text-align: center;
-}
-.card-perfil-nome{
-	padding-top:10px;
-	text-align: center;
-	font-size: 20px;
-}
-
-.card-perfil-titulos{
-	font-size: 14px;
-}
+	.mask-content-top10{
+		text-align: center;
+		color: #eee;
+		padding-top: 10px;
+	}
 
 
+	.footer{
+		background-color: #111;
+		color: white;
+		width: 100%;
+		padding: 10px;
+		text-align: center;
+
+	}
+	@media (max-width: 576px){
+		.mask {
+			margin-top: 20px;
+		}
+	}
+	/* PERFIL */
+
+
+	.topo-perfil{
+		text-align: center;
+		padding: 30px;
+	}
+
+	.nome-perfil{
+		text-transform: uppercase;
+		font-size: 32px;
+		font-weight: 700;
+		text-decoration: underline;
+		color: #82D9A5;
+	}
+
+	.avatar img{
+		border: 2px solid #82D9A5;
+		border-radius: 100%;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+	}
+
+	.pills-perfil a{
+		background-color: #82D9A5;
+		color: #111;
+	}
+
+	.pills-perfil a:hover{
+		background-color: #E0FFF2;
+		transition: .2s all linear;
+		color: #111;
+	}
+
+	.pills-perfil a:visited{
+		color: #fff;
+	}
+
+	.nav-item{
+		border-radius: 0px;
+		border-left: 1px solid #111;
+	}
+
+
+	.card-postagem{
+		background-color: #333;
+		margin-top: 15px;
+		padding: 15px;
+		border: 1px #82D9A5 solid;
+		border-radius: 5px 50px 5px;
+		box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	}
+
+	.card-nome{
+		font-size: 25px;
+		color: #eee;
+		font-weight: 700;
+	}
+	.card-posted-by{
+		color:#82D9A5;
+		text-transform: uppercase;
+	}
+	.card-link a{
+		color:#82D9A5;
+		text-transform: uppercase;
+		font-size: 20px;
+		padding-top: 10px;
+	}
+	.card-link a:hover{
+		transition: .3s all linear;
+		color:#E0FFF2;
+		text-transform: uppercase;
+	}
+
+	.card-content{
+		color: #eee;
+	}
+
+	.home-page-perfil-text{
+		text-transform: uppercase;
+		text-align: center;
+		font-size: 24px;
+		padding: 30px;
+		font-weight: 800;
+		color: #82D9A5;
+	}
+
+	.home-page-perfil-text-nivel{
+		text-transform: uppercase;
+		text-align: center;
+		font-size: 28px;
+		margin-top:35px;
+		padding: 20px;
+		font-weight: 800;
+		color: #82D9A5;
+	}
+
+	.home-page-perfil-text-exp{
+		margin-top:5px;
+		text-align: center;
+		font-size: 20px;
+		padding: 20px;
+		color: #eee;
+	}
+	.conquista_simbol{
+		text-align: center;
+	}
+	.conquista_simbol img{
+		text-align: center;
+		margin: 0 auto;
+		border: 1px solid #aaa;
+	}
+
+	.conq-title{
+		text-align: center;
+		font-size: 16px;
+		color:#eee;
+	}
+
+	.hr-style{
+		border-top: 3px double #82D9A5;
+	}
+
+	.hr-style-2{
+		border-top: 1px dashed #82D9A5;
+	}
+
+	@media (max-width: 992px){
+		.card-content{
+			text-align: center;
+		}
+		.card-link{
+			text-align: center;
+			padding: 20px;
+		}
+		.conq-title{
+			font-size: 16px;
+			padding-bottom: 10px;
+		}
+	}
+
+	.change-info{
+		padding: 15px;
+		margin-bottom: 15px;
+		color: #eee;
+	}
+
+	.info-post{
+		text-align: right;
+		font-size: 16px;
+	}
+
+	.img-post{
+		float: left;
+		border: transparent thin solid;
+		padding: 5px;
+		margin: 0px 10px 10px 0;
+		border: 1px #aaa solid;
+		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	}
+
+	.post-text{
+		text-align: justify;
+		text-indent: 2em;
+	}
+
+	.card-perfil{
+		border: 1px solid #82D9A5;
+		border-radius: 5px 20px;
+		padding: 10px;
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
+
+	.card-perfil-avatar{
+		text-align: center;
+	}
+	.card-perfil-nome{
+		padding-top:10px;
+		text-align: center;
+		font-size: 20px;
+	}
+
+	.card-perfil-titulos{
+		font-size: 14px;
+	}
 
 
 
@@ -322,197 +399,229 @@
 
 
 
-.quiz-title{
-	border-bottom: 2px solid;
-	color: #82D9A5;
-	padding-bottom: 10px;
-	font-weight: 600;
-	text-transform: uppercase;
-	font-size: 25px;
-	text-align: center;
-}
 
-.quiz-info{
-	color: #82D9A5;
-	padding: 15px 0px 5px 0px;
-	font-weight: 600;
-	text-transform: uppercase;
-	font-size: 16px;
-	text-align: center;
-}
 
-.quiz-sub-title{
-	color: #82D9A5;
-	font-weight: 600;
-	text-transform: uppercase;
-	font-size: 16px;
-	text-align: center;
-	margin: 0 auto;
-}
+	.quiz-title{
+		border-bottom: 2px solid;
+		color: #82D9A5;
+		padding-bottom: 10px;
+		font-weight: 600;
+		text-transform: uppercase;
+		font-size: 25px;
+		text-align: center;
+	}
 
-.quiz-content{
-	color: #eee;
-}
-
-.quiz-submit{
-	text-align: center;
-	color: #82D9A5;
-}
-
-.btn-outline-success:hover{
-	color: #82D9A5;
-}
-
-@media (max-width: 768px){
 	.quiz-info{
 		color: #82D9A5;
 		padding: 15px 0px 5px 0px;
 		font-weight: 600;
 		text-transform: uppercase;
 		font-size: 16px;
+		text-align: center;
 	}
 
 	.quiz-sub-title{
 		color: #82D9A5;
 		font-weight: 600;
 		text-transform: uppercase;
-		font-size: 18px;
+		font-size: 16px;
+		text-align: center;
+		margin: 0 auto;
 	}
-}
 
-hr{
-	background-color: #82D9A5;
-}
+	.quiz-content{
+		color: #eee;
+	}
 
-.card-box {
-	border: 1px solid #82D9A5;
-	border-radius: 5px;
-	background-color: #000;
-	color: #fff;
-	text-align: center;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	margin: auto;
-	padding: 10px 5px 5px 5px;
-	margin-bottom: 10px; 
-}
-.card-box hr{ 
-	border:1px solid #82D9A5;
-	margin-top: 10px;
-	margin-bottom: 7px;
-}
+	.quiz-submit{
+		text-align: center;
+		color: #82D9A5;
+	}
 
-.card-box a {
-	font-size: 16px;
-	color: #82D9A5;
-}
-.
-.card-box h4{
-	font-size: 20px;
-	text-transform: uppercase;
-}
+	.btn-outline-success:hover{
+		color: #82D9A5;
+	}
 
-.card-box h4:hover{
-	color: #99FFC2;
-	transition: 0.5s;
-	text-decoration: none;
-}
+	@media (max-width: 768px){
+		.quiz-info{
+			color: #82D9A5;
+			padding: 15px 0px 5px 0px;
+			font-weight: 600;
+			text-transform: uppercase;
+			font-size: 16px;
+		}
 
-.card-box p {
-	font-size: 13px;
-	color: rgba(255,255,255, .85);
-}
+		.quiz-sub-title{
+			color: #82D9A5;
+			font-weight: 600;
+			text-transform: uppercase;
+			font-size: 18px;
+		}
+	}
 
-.quiz-card{
-	padding-top: 10px;
-}
+	hr{
+		background-color: #82D9A5;
+	}
 
-.paragrafos{
-	text-align: justify;
-	text-indent: 1.5em;
-	padding: 10px 0 5px 0;
-}
+	.card-box {
+		border: 1px solid #82D9A5;
+		border-radius: 5px;
+		background-color: #000;
+		color: #fff;
+		text-align: center;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		margin: auto;
+		padding: 10px 5px 5px 5px;
+		margin-bottom: 10px; 
+	}
+	.card-box hr{ 
+		border:1px solid #82D9A5;
+		margin-top: 10px;
+		margin-bottom: 7px;
+	}
 
-input[type=search] {
-	background-color: #333;
-	border: 1px #82D9A5 solid;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	outline: none;
-}
+	.card-box a {
+		font-size: 16px;
+		color: #82D9A5;
+	}
+	.
+	.card-box h4{
+		font-size: 20px;
+		text-transform: uppercase;
+	}
 
-input[type=search]:focus {
-	transition: .2s all linear;
-	background-color: #E0FFF2;
-	border: 1px #82D9A5 solid;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	outline: none;
-}
+	.card-box h4:hover{
+		color: #99FFC2;
+		transition: 0.5s;
+		text-decoration: none;
+	}
 
-input[type=text] {
-	background-color: #333;
-	border: 1px #82D9A5 solid;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	outline: none;
-}
+	.card-box p {
+		font-size: 13px;
+		color: rgba(255,255,255, .85);
+	}
 
-.form-group textarea{
-	background-color: #333;
-	border: 1px #82D9A5 solid;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	outline: none;
-}
+	.quiz-card{
+		padding-top: 10px;
+	}
 
-input[type=text]:focus {
-	transition: .2s all linear;
-	background-color: #E0FFF2;
-	border: 1px #82D9A5 solid;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	outline: none;
-}
+	.paragrafos{
+		text-align: justify;
+		text-indent: 1.5em;
+		padding: 10px 0 5px 0;
+	}
 
-.form-group textarea:focus{
-	transition: .2s all linear;
-	background-color: #E0FFF2;
-	border: 1px #82D9A5 solid;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	outline: none;
-}
+	input[type=search] {
+		background-color: #333;
+		border: 1px #82D9A5 solid;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		outline: none;
+	}
 
-label{
-	color: #82D9A5;	
-	font-size: 16px;
-}
+	input[type=email] {
+		background-color: #333;
+		border: 1px #82D9A5 solid;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		outline: none;
+	}
 
-/* do not group these rules */
-*::-webkit-input-placeholder {
-	color: #82D9A5!important;
-}
-*:-moz-placeholder {
-	/* FF 4-18 */
-	color: #82D9A5!important;
-}
-*::-moz-placeholder {
-	/* FF 19+ */
-	color: #82D9A5!important;
-}
-*:-ms-input-placeholder {
-	/* IE 10+ */
-	color: #82D9A5!important;
-}
+	input[type=email]:focus {
+		transition: .2s all linear;
+		background-color: #E0FFF2;
+		border: 1px #82D9A5 solid;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		outline: none;
+	}
 
-/* do not group these rules */
-*:focus::-webkit-input-placeholder{
-	color: #333!important;
-}
-*:focus:-moz-placeholder:focus {
-	/* FF 4-18 */
-	color: #333!important;
-}
-*:focus::-moz-placeholder:focus {
-	/* FF 19+ */
-	color: #333!important;
-}
-*:focus:-ms-input-placeholder:focus {
-	/* IE 10+ */
-	color: #333!important;
-}
+	input[type=password] {
+		background-color: #333;
+		border: 1px #82D9A5 solid;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		outline: none;
+	}
+
+	input[type=password]:focus {
+		transition: .2s all linear;
+		background-color: #E0FFF2;
+		border: 1px #82D9A5 solid;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		outline: none;
+	}
+
+	input[type=search]:focus {
+		transition: .2s all linear;
+		background-color: #E0FFF2;
+		border: 1px #82D9A5 solid;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		outline: none;
+	}
+
+	input[type=text] {
+		background-color: #333;
+		border: 1px #82D9A5 solid;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		outline: none;
+	}
+
+	.form-group textarea{
+		background-color: #333;
+		border: 1px #82D9A5 solid;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		outline: none;
+	}
+
+	input[type=text]:focus {
+		transition: .2s all linear;
+		background-color: #E0FFF2;
+		border: 1px #82D9A5 solid;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		outline: none;
+	}
+
+	.form-group textarea:focus{
+		transition: .2s all linear;
+		background-color: #E0FFF2;
+		border: 1px #82D9A5 solid;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		outline: none;
+	}
+
+	label{
+		color: #82D9A5;	
+		font-size: 16px;
+	}
+
+	/* do not group these rules */
+	*::-webkit-input-placeholder {
+		color: #82D9A5!important;
+	}
+	*:-moz-placeholder {
+		/* FF 4-18 */
+		color: #82D9A5!important;
+	}
+	*::-moz-placeholder {
+		/* FF 19+ */
+		color: #82D9A5!important;
+	}
+	*:-ms-input-placeholder {
+		/* IE 10+ */
+		color: #82D9A5!important;
+	}
+
+	/* do not group these rules */
+	*:focus::-webkit-input-placeholder{
+		color: #333!important;
+	}
+	*:focus:-moz-placeholder:focus {
+		/* FF 4-18 */
+		color: #333!important;
+	}
+	*:focus::-moz-placeholder:focus {
+		/* FF 19+ */
+		color: #333!important;
+	}
+	*:focus:-ms-input-placeholder:focus {
+		/* IE 10+ */
+		color: #333!important;
+	}
 
